# llm-service

./: README.md  pyproject.toml
docs/deployment/datasystem/: run_example.md
docs/deployment/mooncake/: run_example.md
examples/: PROFILING.md  health_check_example.py  profiling_example.py
examples/online_serving/epd/: chat_with_image.py  disagg_xeypzd_example.sh  http_proxy.py  proxy_chat_with_image.py
llm_service/: envs.py  redis_client.py  request_stats.py  routing_logic.py  service_discovery.py  stats_loggers.py
llm_service/apis/vllm/: proxy.py
llm_service/entrypoints/: worker.py
llm_service/protocol/: protocol.py
llm_service/workers/vllm/: disagg_worker.py
lm_service/: dynamic_pd.py  envs.py  instance_cluster.py  request_stats.py  service_discovery.py  stats_loggers.py  utils.py
lm_service/apis/vllm/: proxy.py
lm_service/balancer/: __init__.py  balancer.py  common.py  dynamic_pd.py  endpoint.py  endpoint_tracker.py  task.py  task_handle.py  task_route.py  workload.py
lm_service/balancer/connector/: __init__.py  kv_connector.py
lm_service/balancer/router/: __init__.py  batch_routing.py  decode.py  encode.py  kvaware.py  prefill.py  queue_len.py  random.py  round_robin.py  router.py
lm_service/entrypoints/: http_service_api.py  worker.py
lm_service/metastore_client/: metastore_client.py  metastore_client_config.py  redis_client.py
lm_service/protocol/: protocol.py
lm_service_vllm_plugin/: __init__.py  plugin.py
tests/: test_dynamic_pd.py  test_health_check.py
tools/: check_spdx_header.py
tools/pre_commit/: mypy.py
(+8 files in other folders)
